fix: 애니메이션 이펙트 gap 사이즈 수정

--- a/app/partner.css
+++ b/app/partner.css
@@ -11,6 +11,7 @@
 :root {
     --max-width: 10rem;
     --max-height: 7rem;
+    --rolling-gap: 3.5rem;
 }
 .marquee-container {
     margin: 0;
@@ -64,7 +65,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 0.5rem;
+    gap: var(--rolling-gap);
 
     animation: rolling 249.25s linear 0s infinite;
     animation-play-state: running;
@@ -85,7 +86,7 @@
     min-width: auto;
     flex-direction: row;
     align-items: center;
-    gap: 0.5rem;
+    gap: var(--rolling-gap);
 }
 
 .marquee-container .marquee .child {
